<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>byteman-demo</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <byteman.version>4.0.10</byteman.version>
        <junit.version>4.13.1</junit.version>
        <assertj.version>3.15.0</assertj.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.jboss.byteman</groupId>
            <artifactId>byteman</artifactId>
            <version>${byteman.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.byteman</groupId>
            <artifactId>byteman-bmunit</artifactId>
            <version>${byteman.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.byteman</groupId>
            <artifactId>byteman-install</artifactId>
            <version>${byteman.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.byteman</groupId>
            <artifactId>byteman-submit</artifactId>
            <version>${byteman.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <environmentVariables>
                        <BYTEMAN_HOME></BYTEMAN_HOME>
                    </environmentVariables>
                    <systemPropertyVariables>
                        <org.jboss.byteman.home></org.jboss.byteman.home>
                        <!--
                        <org.jboss.byteman.verbose>true</org.jboss.byteman.verbose>
                        <org.jboss.byteman.contrib.bmunit.verbose>true</org.jboss.byteman.contrib.bmunit.verbose>
                         -->
                    </systemPropertyVariables>
                    <argLine>-Djdk.attach.allowAttachSelf</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jboss.byteman</groupId>
                <artifactId>byteman-rulecheck-maven-plugin</artifactId>
                <version>${byteman.version}</version>
                <executions>
                    <execution>
                        <id>rulecheck-test</id>
                        <goals>
                            <goal>rulecheck</goal>
                        </goals>
                        <configuration>
                            <packages>
                                <package>demo.example</package>
                            </packages>
                            <includes>
                                <include>**/*.btm</include>
                            </includes>
                            <verbose>true</verbose>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
